<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<parent>
		<groupId>org.jolie-lang</groupId>
		<artifactId>distribution</artifactId>
		<relativePath>../../pom.xml</relativePath>
		<version>1.0.0</version>
	</parent>
	<groupId>org.jolie-lang</groupId>
	<artifactId>jolie-xml</artifactId>
	<version>${jolie.version}</version>
	<packaging>jar</packaging>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
	</properties>
	<name>jolie-xml</name>
	<description>The basic library used by Jolie for XML handling.</description>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.1.1</version>
				<executions>
					<execution>
						<id>copy</id>
						<phase>install</phase>
						<goals>
							<goal>copy</goal>
						</goals>
						<configuration>
							<artifactItems>
								<artifactItem>
									<groupId>wsdl4j</groupId>
									<artifactId>wsdl4j</artifactId>
									<version>1.6.3</version>
									<type>jar</type>
									<destFileName>wsdl4j.jar</destFileName>
								</artifactItem>
							</artifactItems>
							<outputDirectory>${jolie.installation.directory}/lib</outputDirectory>
						</configuration>
					</execution>
					<execution>
						<id>copy-installed</id>
						<phase>install</phase>
						<goals>
							<goal>copy</goal>
						</goals>
						<configuration>
							<artifactItems>
								<artifactItem>
									<groupId>org.jolie-lang</groupId>
									<artifactId>${project.artifactId}</artifactId>
									<version>${jolie.version}</version>
									<type>jar</type>
									<destFileName>${project.artifactId}.jar</destFileName>
								</artifactItem>
							</artifactItems>
							<outputDirectory>${project.parent.basedir}/${jolie.installation.directory}/lib</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>${project.groupId}</groupId>
			<artifactId>jolie</artifactId>
			<version>${jolie.version}</version>
		</dependency>
		<dependency>
			<groupId>${project.groupId}</groupId>
			<artifactId>libjolie</artifactId>
			<version>${jolie.version}</version>
		</dependency>
		<dependency>
			<groupId>${project.groupId}</groupId>
			<artifactId>xsom</artifactId>
			<version>${jolie.version}</version>
		</dependency>
		<dependency>
			<groupId>wsdl4j</groupId>
			<artifactId>wsdl4j</artifactId>
			<version>1.6.3</version>
		</dependency>

	</dependencies>
	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub Jolie Apache Maven Packages</name>
			<url>https://maven.pkg.github.com/jolie/jolie</url>
		</repository>
	</distributionManagement>
</project>
